# pexels-cli

./: .gitignore  Cargo.toml  Makefile  README.md  flake.nix
.github/workflows/: ci.yml  nix.yml  release.yml
pexels/: Cargo.toml
pexels/src/: api.rs  cli.rs  config.rs  lib.rs  main.rs  output.rs  proj.rs  util.rs
pexels/tests/: integration_mock.rs  unit_auth.rs  unit_config.rs  unit_output.rs
