[workspace]
members = ["pexels"]
resolver = "2"

[workspace.package]
edition = "2021"
license = "MIT OR Apache-2.0"
homepage = "https://github.com/agynio/pexels-cli"
repository = "https://github.com/agynio/pexels-cli"
rust-version = "1.70"

[workspace.dependencies]
anyhow = "1.0"
thiserror = "1.0"
clap = { version = "4.5", features = ["derive", "wrap_help"] }
tokio = { version = "1.39", features = ["macros", "rt-multi-thread", "time", "fs"] }
reqwest = { version = "0.12", features = ["json", "rustls-tls", "stream"] }
serde = { version = "1.0", features = ["derive"] }
serde_yaml = "0.9"
serde_json = "1.0"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["fmt", "env-filter"] }
directories = "5.0"
url = "2.5"
regex = "1.10"
once_cell = "1.19"
chrono = { version = "0.4", features = ["serde"] }
rand = "0.8"

[workspace.dependencies.assert_cmd]
version = "2.0"

[workspace.dependencies.predicates]
version = "3.1"

[workspace.dependencies.wiremock]
version = "0.6"

[workspace.metadata.package]
description = "Pexels CLI for agents and humans"
authors = ["agynio", "Casey Quinn <vitalii+casey-quinn@hautech.ai>"]
