[package]
name = "pexels"
version = "0.1.0"
edition = "2021"
description = "Pexels CLI"
license = "MIT OR Apache-2.0"

[dependencies]
anyhow = { workspace = true }
thiserror = { workspace = true }
clap = { workspace = true }
tokio = { workspace = true }
reqwest = { workspace = true }
serde = { workspace = true }
serde_yaml = { workspace = true }
serde_json = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
directories = { workspace = true }
url = { workspace = true }
regex = { workspace = true }
once_cell = { workspace = true }
chrono = { workspace = true }
rand = { workspace = true }

[dev-dependencies]
assert_cmd = { workspace = true }
predicates = { workspace = true }
tokio = { workspace = true }
serde_json = { workspace = true }

[features]
default = []
